
	* lisp/sawfish/wm/commands/shrink-yank.jl: export commands

	* lisp/sawfish/wm/workspace.jl: export send-to-workspace 
	                                fix a select-workspace-from-first call [Michal Maruska]

	* configure.in: bump minimum librep to 0.90.2, to make sure folks get a fixed sawfish-ui regarding UTF8 strings

	* man/news.texi: updated

2009-08-09  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/match-window.jl: move rename-window here, as it requires prompt but this either does not 
	                                       load properly in windows.jl or breaks sawfish-ui if require'ed instead of open'ed

	* KEYBINDINGS: Added desckription of several keys

2009-08-05  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/windows.jl: make rename-window work again

2009-07-30  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/gtk/widgets/color.jl: since we now got gtk-color-button-get-color-interp in rep-gtk, replace
	                                     Button + ColorPreview [deprecated] + ColorSelection Trio by single ColorButton

	* lisp/sawfish/gtk/color-preview.jl: obsolete because of the above widget-transistion

	* Makefile.in: add sawfish-ksm.desktop to uninstall rule

	* sawfish.spec.in: package sawfish-ksm.desktop

2009-07-29  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/mmc/window-manipulation.jl: moved maximize-unframe/reframe into sawfish.wm.state.maximize
	                                              moved rename-window into sawfish.wm.windows 

	* lisp/sawfish/wm/windows.jl: first change WM_NAME then _NET_WM_NAME in rename-window (so that we can grab
	                              the new window-name with sawfish-ui and display it in the titlebar (some panels,
				      eg. gnome-panel, don't accept the new name, though))

	* lisp/sawfish/wm/ext/match-window.jl: added window-name matcher

	* lisp/sawfish/gtk/stock.jl: remove make-url-widget function as we now got GtkLinkButton in rep-gtk
